# QT-Solitaire

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Meeting-notes.md  README.md  Setup-instructions.md
doc/html/: annotated.html  card_8hpp.html  card_8hpp_source.html  class_card-members.html  class_card.html  class_deck-members.html  class_deck.html  class_klondike_pile-members.html  class_klondike_pile.html  class_pile-members.html  class_pile.html  class_target_pile-members.html  class_target_pile.html  class_waste_pile-members.html  class_waste_pile.html  classes.html  deck_8hpp.html  deck_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  klondike_pile_8hpp.html  klondike_pile_8hpp_source.html  main_8cpp.html  main_8cpp_source.html  md_src_2project_read_me.html  md_src_2readme.html  menudata.js  pages.html  pile_8hpp.html  (+7 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+28 more)
src/: card.cpp  card.hpp  deck.cpp  deck.hpp  game.cpp  game.hpp  klondikePile.cpp  klondikePile.hpp  main.cpp  mainwindow.cpp  mainwindow.h  pile.cpp  pile.hpp  projectReadMe.md  settings.cpp  settings.hpp  stats.cpp  stats.hpp  targetPile.cpp  targetPile.hpp  wastePile.cpp  wastePile.hpp
src/assets/: resources.qrc
src/gui/: gameSoundManager.cpp  gameSoundManager.hpp  gameView.cpp  gameView.hpp  klondikeLayout.cpp  klondikeLayout.hpp  klondikePileItem.txt  layout.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.md
tests/: qtTestApp.hpp  test_card.cpp  test_deck.cpp  test_dummy.cpp  test_game.cpp  test_klondikePile.cpp  test_targetPile.cpp  test_wastePile.cpp
